[package]
name = "violet"
version = "0.1.0"
authors = ["uzushino <torattoria.mamiya@gmail.com>"]
edition = "2018"

[dependencies]
failure = "*"
pulldown-cmark = "0.4.1"
comrak = "0.6.2"
mdcat = "0.13.0"
syntect = "*"
madato = "0.5.3"
clap = "*"
env_logger = "*"
termion = "*"
futures = "*"
linked-hash-map = "*"
chrono = "*"
reqwest = "*"
Boa = "0.5.1"
gc = "*"
rand = "0.7.2"
sqlx = { version = "*", features = [ "mysql" ] }