[package]
name = "violet"
version = "0.1.0"
authors = ["uzushino <torattoria.mamiya@gmail.com>"]
edition = "2018"

[dependencies]
failure = "*"
anyhow = "1.0"
serde_json = "^1.0.40"

pulldown-cmark = "*"
comrak = "*"
mdcat = "*"
syntect = "*"
madato = "*"
clap = "*"
env_logger = "*"
termion = "*"
futures = "*"
linked-hash-map = "*"
chrono = "*"
reqwest = "*"
Boa = "0.11.0"
gc = "*"
rand = "0.7.2"
sqlx = { version = "0.2.4", features = [ "mysql" ] }
lazy_static = "*"
futures-core = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.1", default-features = false }
